.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
11:37:22 **** Rebuild of configuration Debug for project TP_[2] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o B.o "..\\B.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o BValidaciones.o "..\\BValidaciones.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o TP_[2].o "..\\TP_[2].c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o ArrayEmployees.o "..\\ArrayEmployees.c" 
gcc -o TP_[2].exe ArrayEmployees.o B.o BValidaciones.o TP_[2].o 
Info: Nothing to build for TP_[2]
11:40:33 **** Incremental Build of configuration Debug for project TP_[2] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o ArrayEmployees.o "..\\ArrayEmployees.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o TP_[2].o "..\\TP_[2].c" 
..\TP_[2].c: In function 'main':
..\TP_[2].c:42:11: error: redeclaration of 'list' with no linkage
  Employee list[TamArray] =
           ^~~~
..\TP_[2].c:36:11: note: previous declaration of 'list' was here
  Employee list[TamArray] ;
           ^~~~
11:42:49 **** Incremental Build of configuration Debug for project TP_[2] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o TP_[2].o "..\\TP_[2].c" 
gcc -o TP_[2].exe ArrayEmployees.o B.o BValidaciones.o TP_[2].o 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file TP_[2].exe: Permission denied
collect2.exe: error: ld returned 1 exit status
11:44:09 **** Incremental Build of configuration Debug for project TP_[2] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o ArrayEmployees.o "..\\ArrayEmployees.c" 
gcc -o TP_[2].exe ArrayEmployees.o B.o BValidaciones.o TP_[2].o 
11:45:39 **** Incremental Build of configuration Debug for project TP_[2] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o ArrayEmployees.o "..\\ArrayEmployees.c" 
gcc -o TP_[2].exe ArrayEmployees.o B.o BValidaciones.o TP_[2].o 
11:45:57 **** Incremental Build of configuration Debug for project TP_[2] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o ArrayEmployees.o "..\\ArrayEmployees.c" 
gcc -o TP_[2].exe ArrayEmployees.o B.o BValidaciones.o TP_[2].o 
11:46:11 **** Incremental Build of configuration Debug for project TP_[2] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o ArrayEmployees.o "..\\ArrayEmployees.c" 
gcc -o TP_[2].exe ArrayEmployees.o B.o BValidaciones.o TP_[2].o 
11:46:37 **** Incremental Build of configuration Debug for project TP_[2] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o ArrayEmployees.o "..\\ArrayEmployees.c" 
gcc -o TP_[2].exe ArrayEmployees.o B.o BValidaciones.o TP_[2].o 
11:46:57 **** Incremental Build of configuration Debug for project TP_[2] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o ArrayEmployees.o "..\\ArrayEmployees.c" 
gcc -o TP_[2].exe ArrayEmployees.o B.o BValidaciones.o TP_[2].o 
11:48:05 **** Incremental Build of configuration Debug for project TP_[2] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o TP_[2].o "..\\TP_[2].c" 
gcc -o TP_[2].exe ArrayEmployees.o B.o BValidaciones.o TP_[2].o 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file TP_[2].exe: Permission denied
collect2.exe: error: ld returned 1 exit status
11:48:08 **** Incremental Build of configuration Debug for project TP_[2] ****
Info: Internal Builder is used for build
gcc -o TP_[2].exe ArrayEmployees.o B.o BValidaciones.o TP_[2].o 
11:50:50 **** Incremental Build of configuration Debug for project TP_[2] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o ArrayEmployees.o "..\\ArrayEmployees.c" 
gcc -o TP_[2].exe ArrayEmployees.o B.o BValidaciones.o TP_[2].o 
11:52:25 **** Incremental Build of configuration Debug for project TP_[2] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o ArrayEmployees.o "..\\ArrayEmployees.c" 
gcc -o TP_[2].exe ArrayEmployees.o B.o BValidaciones.o TP_[2].o 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file TP_[2].exe: Permission denied
collect2.exe: error: ld returned 1 exit status
11:52:32 **** Incremental Build of configuration Debug for project TP_[2] ****
Info: Internal Builder is used for build
gcc -o TP_[2].exe ArrayEmployees.o B.o BValidaciones.o TP_[2].o 
